
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int session_data2 ;
typedef int session_data1 ;
typedef int response ;
typedef int buffer ;
struct TYPE_4__ {int type; int flags; void* length; } ;
struct TYPE_3__ {int* protocol; int command; int flags; int flags2; int pid; int uid; int mid; int tid; } ;
typedef TYPE_1__ SMB_HEADER ;
typedef TYPE_2__ NETBIOS_HEADER ;


 int fprintf (int ,char*) ;
 int getpid () ;
 void* htons (int) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int,int) ;
 scalar_t__ read (int,char*,int) ;
 int read_timer (int,int) ;
 scalar_t__ send (int,char*,int,int ) ;
 int stderr ;
 int write_timer (int,int) ;

int start_session(int sock)
{
        char buffer[1000];
        char response[4096];
        char session_data1[] = "\x00\xff\x00\x00\x00\x00\x20\x02\x00\x01\x00\x00\x00\x00";
        char session_data2[] = "\x00\x00\x00\x00\x5c\x5c\x69\x70\x63\x24\x25\x6e\x6f\x62\x6f\x64\x79"
                                  "\x00\x00\x00\x00\x00\x00\x00\x49\x50\x43\x24";

        NETBIOS_HEADER *netbiosheader;
        SMB_HEADER *smbheader;

        memset(buffer, 0x00, sizeof(buffer));

        netbiosheader = (NETBIOS_HEADER *)buffer;
        smbheader = (SMB_HEADER *)(buffer + sizeof(NETBIOS_HEADER));

        netbiosheader->type = 0x00;
        netbiosheader->flags = 0x00;
        netbiosheader->length = htons(0x2E);

        smbheader->protocol[0] = 0xFF;
        smbheader->protocol[1] = 'S';
        smbheader->protocol[2] = 'M';
        smbheader->protocol[3] = 'B';
        smbheader->command = 0x73;
        smbheader->flags = 0x08;
        smbheader->flags2 = 0x01;
        smbheader->pid = getpid() & 0xFFFF;
        smbheader->uid = 100;
        smbheader->mid = 0x01;

        memcpy(buffer + sizeof(NETBIOS_HEADER) + sizeof(SMB_HEADER), session_data1, sizeof(session_data1) - 1);

        if(write_timer(sock, 3) == 1)
                if (send(sock, buffer, 50, 0) < 0) return -1;

        memset(response, 0x00, sizeof(response));

        if (read_timer(sock, 3) == 1)
                if (read(sock, response, sizeof(response) - 1) < 0) return -1;

        netbiosheader = (NETBIOS_HEADER *)response;
        smbheader = (SMB_HEADER *)(response + sizeof(NETBIOS_HEADER));

        if (netbiosheader->type != 0x00) fprintf(stderr, "+ Recieved a non session message\n");

        netbiosheader = (NETBIOS_HEADER *)buffer;
        smbheader = (SMB_HEADER *)(buffer + sizeof(NETBIOS_HEADER));

        memset(buffer, 0x00, sizeof(buffer));

        netbiosheader->type = 0x00;
        netbiosheader->flags = 0x00;
        netbiosheader->length = htons(0x3C);

        smbheader->protocol[0] = 0xFF;
        smbheader->protocol[1] = 'S';
        smbheader->protocol[2] = 'M';
        smbheader->protocol[3] = 'B';
        smbheader->command = 0x70;
        smbheader->pid = getpid() & 0xFFFF;
        smbheader->tid = 0x00;
        smbheader->uid = 100;

        memcpy(buffer + sizeof(NETBIOS_HEADER) + sizeof(SMB_HEADER), session_data2, sizeof(session_data2) - 1);

        if(write_timer(sock, 3) == 1)
                if (send(sock, buffer, 64, 0) < 0) return -1;

        memset(response, 0x00, sizeof(response));

        if (read_timer(sock, 3) == 1)
                if (read(sock, response, sizeof(response) - 1) < 0) return -1;

        netbiosheader = (NETBIOS_HEADER *)response;
        smbheader = (SMB_HEADER *)(response + sizeof(NETBIOS_HEADER));

        if (netbiosheader->type != 0x00) return -1;

        return 0;
}
